# audio_widener_dev

./: .gitmodules  process_data.py  run_jupyter.bat  test_fl_studio.flp
docs/: docgen.ipynb  tz_draft.txt  ~$ководство оператора5.docx  ~$ограмма и методика испытаний7.docx  ~$яснительная записка24.docx  Отзыв руководителя.docx  Пояснительная записка.docx  Пояснительная записка12.docx  Пояснительная записка13.docx  Пояснительная записка14.docx  Пояснительная записка15.docx  Пояснительная записка16.docx  Пояснительная записка17.docx  Пояснительная записка18.docx  Пояснительная записка19.docx  Пояснительная записка20.docx  Пояснительная записка21.docx  Пояснительная записка22.docx  Пояснительная записка23.docx  Пояснительная записка24.docx  Программа и методика испытаний10.docx  Программа и методика испытаний11.docx  Программа и методика испытаний7.docx  Программа и методика испытаний8.docx  Программа и методика испытаний9.docx  Руководство оператора3.docx  Руководство оператора4.docx  Руководство оператора5.docx  Руководство оператора6.docx  Руководство оператора7.docx  Текст программы.odt  Текст программы2.docx  Текст программы6.docx  Техническое задание10.docx  Техническое задание11.docx  Техническое задание12.docx  Техническое задание13.docx  Техническое задание14.docx  Техническое задание15.docx  Техническое задание16.docx  (+5 more)
docs_final/: Пояснительная записка.docx  Программа и методика испытаний.docx  Руководство оператора.docx  Текст программы.docx  Техническое задание.docx
pycharm_proj/: audio_processing.py  create_spectrogram.py  imports.py  main.ipynb  render_audio.py  test.py  tmp.txt  waveform_experiments.ipynb
stereo_plugin/: .gitignore  CMakeLists.txt  calc.py  stereo_plugin.jucer
stereo_plugin/JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
stereo_plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpectrumCanvas.cpp  SpectrumCanvas.h  TestComponent.cpp  TestComponent.h
stereo_plugin/Source/Processing/: DataAccumulator.cpp  DataAccumulator.h  DataNormalizer.cpp  DataNormalizer.h  MainProcessor.cpp  MainProcessor.h  NoiseGenerator.h  ProcessingParams.cpp  ProcessingParams.h  ProcessingRendering.cpp  ProcessingRendering.h  SyncedArray.h
stereo_plugin/Source/SpectrumCanvas/: Attributes.cpp  Attributes.h  SpectrumRenderer.cpp  SpectrumRenderer.h  SpectrumShaders.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h
stereo_plugin/Source/UI/: SpectrumCanvas.cpp  SpectrumCanvas.h
stereo_plugin/Source/UI/DynamicTextureRenderer/: Attributes.cpp  Attributes.h  DynamicTextureRenderer.cpp  DynamicTextureRenderer.h  SpectrumShaders.h  Texture.cpp  Texture.h  Uniforms.cpp  Uniforms.h  VertexBuffer.cpp  VertexBuffer.h
stereo_plugin_clion/: CMakeLists.txt  JUCE
(+6 files in other folders)
